[package]
name = "fourbuttons"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.39"
curl = "0.4.47"
env_logger = "0.11.6"
log = "0.4.22"
rppal = "0.22.1"
openssl = { version = "0.10", features = ["vendored"] }
anyhow = "1.0.95"

[dependencies.rusqlite]
version = "0.32.1"
features = ["bundled"]
